bootstrap autoplay added

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </div>
     </div>
   </nav>
-  <div id="carouselExampleIndicators" class="carousel slide ">
+  <div id="carouselExampleIndicators" class="carousel slide " data-bs-ride="carousel" data-bs-pause="false" data-bs-interval="2500" >
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img src="https://static3.toyotabharat.com/images/homepage/banners/wow-awesome-banner-1920x807.jpg?v=14042023" class="d-block w-100" alt="...">
